# coral

./: CMakeLists.txt  CREDITS.md  LICENSE  README.md
.github/workflows/: cmake.yml  codeql-analysis.yml
cmake/: FetchCMocka.cmake
doc/: Lifecycle.md  MemoryManagement.md
include/: coral.h
include/coral/: array.h  autorelease_pool.h  class.h  context.h  error.h  integer.h  interface.h  lock.h  lock_condition.h  notification.h  object.h  range.h  reference.h  rwlock.h  string.h  tree_map.h  tree_set.h  weak_reference.h
src/: array.c  autorelease_pool.c  class.c  context.c  coral.c  error.c  integer.c  interface.c  lock.c  lock_condition.c  notification.c  object.c  range.c  red_black_tree.c  reference.c  rwlock.c  scope.c  string.c  tree_map.c  tree_set.c  weak_reference.c
src/private/: array.h  autorelease_pool.h  class.h  context.h  coral.h  integer.h  interface.h  lock.h  lock_condition.h  object.h  range.h  red_black_tree.h  reference.h  rwlock.c  rwlock.h  scope.h  string.h  tree_map.h  tree_set.h  weak_reference.h
src/test/: cmocka.h  wrap.c  wrap.h
test/: test_array.c  test_autorelease_pool.c  test_class.c  test_context.c  test_coral.c  test_integer.c  test_interface.c  test_lock.c  test_lock_condition.c  test_object.c  test_range.c  test_red_black_tree.c  test_reference.c  test_rwlock.c  test_scope.c  test_string.c  test_tree_map.c  test_tree_set.c  test_weak_reference.c
